--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.7.2",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
